--- a/golfapp-client/src/Leaderboard.css
+++ b/golfapp-client/src/Leaderboard.css
@@ -9,7 +9,7 @@
   margin-bottom: 1rem; /* Space below controls */
   align-items: center;
   padding: 0.5rem;
-  background-color: #f0f0f0; /* Light grey background */
+  
   border-radius: 5px;
   width: fit-content; /* Make width fit content */
   margin-left: auto; /* Center the block */
@@ -35,13 +35,12 @@
 
 /* Leaderboard Widget Styling */
 .leaderboard-widget {
-  border: 4px solid #000;
+  
   padding: 0.5rem;
   width: 95%; /* Widened to 95% of its parent container */
   margin: 0 auto;
   /* font-family is now set globally on body */
   font-weight: 100; /* Ensure Thin for general text */
-  background-color: #FFD700;
   border-radius: 0;
   color: var(--dark-blue);
 }
@@ -73,6 +72,10 @@
   font-weight: bold; /* Make table headers bold */
 }
 
+.leaderboard-table tr > td {
+  background-color: #ffba00;
+}
+
 .leaderboard-table td {
   border: 2px solid #000;
   padding: 0.3rem;
@@ -80,6 +83,7 @@
   font-size: 0.8rem;
   border-radius: 0;
   color: var(--dark-blue);
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 .leaderboard-table thead {
@@ -88,7 +92,6 @@
 }
 
 .leaderboard-table tbody td {
-  background-color: #FFD700;
 }
 
 .leaderboard-table tfoot td {
@@ -99,19 +102,27 @@
   height: 10px;
 }
 
-.leaderboard-table .gross-score-cell,
-.leaderboard-table .points-cell {
-  background-color: #fff;
-  color: #FF0000;
+.score-square {
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Specific styling for player name cells */
-.leaderboard-table .player-name-cell {
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 120px;
+.stableford-square {
+  background-color: red;
+  color: white;
+}
+
+.round-square {
+  background-color: #ffc333;
+}
+
+.gross-square {
+  background-color: red;
+  color: white;
 }
 
 .narrow-column {
